Changed name space to graphic so its consistant

--- a/hktm/lesson_contents/templates/lesson_contents/KT36_print_container.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KT36_print_container.html
@@ -15,7 +15,7 @@
                 {{content.name}}
               </div>
               <div style="font-size:18pt;text-align: right;margin-bottom: -10px;">
-                名前 (　　　　　　)
+                名前 (<img src="/static/empty.png" height="200" width="1">)
               </div>
             </div>
             {% if content.scoring_comment==None %}
