--- a/hktm/lessons/templates/lessons/list_lessons.html
+++ b/hktm/lessons/templates/lessons/list_lessons.html
@@ -10,14 +10,22 @@
   {{_('Available Grades')}}<br>
   <div class="list-group list-group-horizontal-md" id="gradeList" role="tablist">
     {% for g in grades %}
-      <a class="list-group-item list-group-item-action" data-toggle="list" href="#grade-{{g}}" role="tab" style="text-align: center">{{g}}</a>
+      {% if jump==g|int %}
+        <a class="list-group-item list-group-item-action active" data-toggle="list" href="#grade-{{g}}" role="tab" style="text-align: center">{{g}}</a>
+      {% else %}
+        <a class="list-group-item list-group-item-action" data-toggle="list" href="#grade-{{g}}" role="tab" style="text-align: center">{{g}}</a>
+      {% endif %}
     {% endfor %}
   </div>
 
   <script>
     //open the first tab
     $(function () {
+    {% if jump==0 %}
       $('#gradeList a:first-child').tab('show')
+    {% else %}
+      $('#grade-{{jump}}').tab('show')
+    {% endif %}
     })
   </script>
 
