--- a/hktm/templates/chrome.html
+++ b/hktm/templates/chrome.html
@@ -45,7 +45,7 @@
       {% if messages %}
         <div class="container">
           {% for message in messages %}
-          {% if message[0]!=NoneType %}
+          {% if message[0]=='message' %}
             <div class="alert alert-info alert-dismissible fade show" role="alert">
           {% else %}
             <div class="alert alert-{{ message[0] }} alert-dismissible fade show" role="alert">
