--- a/hktm/static/questions.css
+++ b/hktm/static/questions.css
@@ -262,7 +262,9 @@
   display: grid;
   grid-template-columns: 80px 80px 80px 80px 80px 80px 80px 80px;
   width: 80px;
-  border: 1px black solid
+  border: 1px black solid;
+  margin-left: -1px;
+  border-top-style: none;
 }
 .trcp_char{
   border-top: 1px solid black;
