fixed style for tracing practice question

--- a/hktm/static/questions.css
+++ b/hktm/static/questions.css
@@ -266,6 +266,7 @@
   border: 1px black solid;
   margin-left: -1px;
   border-top-style: none;
+  height: 640px;
 }
 .trcp_char{
   border-top: 1px solid black;
