added style for test header instruction block

--- a/hktm/lesson_contents/templates/lesson_contents/KT36_print_container.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KT36_print_container.html
@@ -48,7 +48,7 @@
             </div>
           {% endif %}
         </div>
-        <div class='header-instructions' style="margin-right: -18px">
+        <div class='header-test-instructions' style="margin-right: -18px">
           （　）に読みを書きましょう。<br> □に漢字を、［　］には漢字とひらがなを書きましょう。
         </div>
       </div>
