--- a/hktm/lesson_contents/templates/lesson_contents/KTG1_print_container.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KTG1_print_container.html
@@ -48,7 +48,7 @@
             </div>
           {% endif %}
         </div>
-        <div class='header-instructions' style="margin-right: -18px">
+        <div class='header-test-instructions' style="margin-right: -18px">
           （　）に　読みを　かきましょう。<br> □に　かん字を、［　］には　かん字と　ひらがなを　かきましょう。
         </div>
       </div>
