fixed Yumis computer - it was missing the "standard" font - sigh

--- a/hktm/lesson_contents/templates/lesson_contents/KTG2_print_container.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KTG2_print_container.html
@@ -49,7 +49,7 @@
           {% endif %}
         </div>
         <div class='header-test-instructions' style="margin-right: -18px">
-          （　）に　読みを　かきましょう。<br> □に　かん字を、［　］には　かん字と　ひらがなを　<br>かきましょう。
+          （　）に　読みを　かきましょう。<br> □に　かん字を、［　］には　かん字と　ひらがなを　かきましょう。
         </div>
       </div>
       <div class='content'>
