fixed japanese vertical writing for "western" numbers

--- a/hktm/lesson_contents/templates/lesson_contents/print_container.html
+++ b/hktm/lesson_contents/templates/lesson_contents/print_container.html
@@ -7,8 +7,8 @@
   <body>
     <div class='page' style='float: right'>
       <div class='header'>
-        <div class='header_frame'>
-          <div>
+        <div class='header_frame' >
+          <div style='writing-mode: horizontal-tb;text-align: center'>
             {{content.name}}
           </div>
           <div>
