fixed japanese vertical writing for "western" numbers

--- a/hktm/lesson_contents/templates/lesson_contents/KTG1_print_container.html
+++ b/hktm/lesson_contents/templates/lesson_contents/KTG1_print_container.html
@@ -17,7 +17,7 @@
               {% endif %}
             </div>
             <div class='header_no_frame'>
-              <div style="font-size:20pt; font-weight: bold;">
+              <div style="font-size:20pt; font-weight: bold; writing-mode: horizontal-tb;text-align: center">
                 {{content.name}}
               </div>
               <div style="font-size:18pt;text-align: right;margin-bottom: -10px;">
